Timbo925 New wallets

--- a/bitaddress-wallet-kit.html
+++ b/bitaddress-wallet-kit.html
@@ -12170,17 +12170,17 @@
 					// Qr Code - Public
 					var qr_code = ninja.qrCode.createCanvas(bitcoinAddress);
 					var qrcode_pubaddr = qr_code.toDataURL('image/jpeg');
-					doc.addImage(qrcode_pubaddr, 'JPEG', pageMargin+0.14, pageMargin+0.185+heightOffset+1.37, 0.8, 0.8); //Print
+					doc.addImage(qrcode_pubaddr, 'JPEG', pageMaxWidth-pageMargin-2.71, pageMargin+heightOffset+0.26, 0.8, 0.8); //Print
 
 					// Qr Code - Private
 					var qr_code = ninja.qrCode.createCanvas(privateKey);
 					var qrcode_priv = qr_code.toDataURL('image/jpeg');
-					doc.addImage(qrcode_priv, 'JPEG', pageMaxWidth-pageMargin-2-0.58, pageMargin+heightOffset+0.18, 0.8, 0.8); //Print
+					doc.addImage(qrcode_priv, 'JPEG', pageMaxWidth-pageMargin-2.72, pageMargin+heightOffset+1.4, 0.8, 0.8); //Print
 
 					// Pub Address
 					if(opw.paperwallet.show_alias) var text = alias_full+ ": "+bitcoinAddress;
 					else var text = bitcoinAddress;
-					doc.text(pageMargin+1.02+0.05, pageMargin+2.2+heightOffset+0.13, text); // Print
+					doc.text(pageMargin+0.56, pageMargin+heightOffset+2.18, text); // Print
 						
 					// Stub
 					// Qr Code Public
